Re-add composer^^

--- a/renovate.json
+++ b/renovate.json
@@ -60,7 +60,8 @@
     "custom.regex",
     "dockerfile",
     "github-actions",
-    "pip_requirements"
+    "pip_requirements",
+    "composer"
   ],
   "customManagers": [
     {
