--- a/renovate.json
+++ b/renovate.json
@@ -50,7 +50,8 @@
       "matchPackageNames": ["wodby/drupal-php"],
       "matchDatasources": ["docker"],
       "matchManagers": ["custom.regex"],
-      "updateTypes": ["major", "minor", "patch"]
+      "updateTypes": ["major", "minor", "patch"],
+      "allowedVersions": "^8\\.4-"
     }
   ],
   "labels": [
@@ -75,9 +76,7 @@
       "datasourceTemplate": "docker",
       "depNameTemplate": "wodby/drupal-php",
       "extractVersionTemplate": "{{{ currentValue }}}",
-      "versioningTemplate": "loose",
-      "updateTypes": ["major", "minor", "patch"],
-      "allowedVersions": "^8\\.4-"
+      "versioningTemplate": "loose"
     },
     {
       "customType": "regex",
