--- a/renovate.json
+++ b/renovate.json
@@ -73,7 +73,7 @@
       "datasourceTemplate": "docker",
       "depNameTemplate": "wodby/drupal-php",
       "extractVersionTemplate": "{{{ currentValue }}}",
-      "versioningTemplate": "regex:^8\\.4-(?<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
+      "versioningTemplate": "regex:^8\\.4-(?<major>[0-9]+)\\.(?<minor>[0-9]+)\\.(?<patch>[0-9]+)$"
     },
     {
       "customType": "regex",
