--- a/renovate.json
+++ b/renovate.json
@@ -60,8 +60,8 @@
   "customManagers": [
     {
       "customType": "regex",
-      "managerFilePatterns": [
-        "/^\\.env\\.example$/"
+      "fileMatch": [
+        "^\\.env\\.example$"
       ],
       "matchStrings": [
         "PHP_TAG=(?<currentValue>8\\.4-[0-9]+\\.[0-9]+\\.[0-9]+)"
@@ -73,8 +73,8 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": [
-        "/^\\.env\\.example$/"
+      "fileMatch": [
+        "^\\.env\\.example$"
       ],
       "matchStrings": [
         "MARIADB_TAG=(?<currentValue>[\\w\\.-]+)"
@@ -86,8 +86,8 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": [
-        "/^\\.env\\.example$/"
+      "fileMatch": [
+        "^\\.env\\.example$"
       ],
       "matchStrings": [
         "NGINX_TAG=(?<currentValue>[\\w\\.-]+)"
@@ -99,8 +99,8 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": [
-        "/^\\.env\\.example$/"
+      "fileMatch": [
+        "^\\.env\\.example$"
       ],
       "matchStrings": [
         "VARNISH_TAG=(?<currentValue>[\\w\\.-]+)"
@@ -112,8 +112,8 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": [
-        "/^\\.env\\.example$/"
+      "fileMatch": [
+        "^\\.env\\.example$"
       ],
       "matchStrings": [
         "MEMCACHED_TAG=(?<currentValue>[\\w\\.-]+)"
@@ -125,8 +125,8 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": [
-        "/^\\.env\\.example$/"
+      "fileMatch": [
+        "^\\.env\\.example$"
       ],
       "matchStrings": [
         "PYTHON_TAG=(?<currentValue>[\\w\\.-]+)"
@@ -138,8 +138,8 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": [
-        "/^\\.env\\.example$/"
+      "fileMatch": [
+        "^\\.env\\.example$"
       ],
       "matchStrings": [
         "TRAEFIK_TAG=(?<currentValue>[\\w\\.-]+)"
