--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ MARIADB_TAG=11.4-3.30.5
 NGINX_TAG=1.27-5.40.2
 VARNISH_TAG=6.0-4.19.1
 MEMCACHED_TAG=1-2.18.5
-PYTHON_TAG=3.13
+PYTHON_TAG=3.13-alpine
 TRAEFIK_TAG=v3.3
 
 ### PROJECT SETTINGS
