--- a/renovate.json
+++ b/renovate.json
@@ -44,6 +44,11 @@
       ],
       "matchDatasources": [
         "docker"
+      ],
+      "updateTypes": [
+        "major",
+        "minor",
+        "patch"
       ]
     }
   ],
