--- a/.docker/python/Containerfile
+++ b/.docker/python/Containerfile
@@ -1,6 +1,6 @@
 ARG PYTHON_TAG=3.13
 ARG PYTHON_PORT=5000
-FROM --platform=$BUILDPLATFORM python:${PYTHON_TAG}-alpine AS builder
+FROM --platform=$BUILDPLATFORM python:${PYTHON_TAG} AS builder
 
 WORKDIR /code
 
