--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/dotenv": "^7.1"
     },
     "require-dev": {
+        "ergebnis/composer-normalize": "^2.47",
         "johnatas-x/angry-bearded": "2.4.1",
         "roave/security-advisories": "dev-latest"
     },
@@ -157,7 +158,7 @@
         ],
         "patches": {
             "drupal/core": {
-                "Don't execute cron on site install": "patches/disable-cron-execution-on-install.patch"
+                "Don't execute cron on site install": "patches/core/disable-cron-execution-on-install.patch"
             }
         },
         "scripts": {
