--- a/.github/actions/project/action.yml
+++ b/.github/actions/project/action.yml
@@ -1,25 +1,23 @@
 name: Setup & install project
 
-# TODO: update this file with new ddev config.
-
 runs:
   using: "composite"
   steps:
-    - name: Setup project
+    - name: DDEV config + start
       run: |
-        cp ".env.example" ".env"
-        sed -i 's/^DB_HOST=.*/DB_HOST=127.0.0.1/' .env
-        sudo rm -Rf web/sites
-        composer install --no-dev --no-progress --prefer-dist --optimize-autoloader
-        mkdir -p "web/sites/default"
-        cp ".docker/files/settings.php.default" "web/sites/default/settings.php"
+        ddev config global --instrumentation-opt-in=false
+        ddev start
       shell: bash
 
-    - name: Test project install
+    - name: Install dependencies
       run: |
-        vendor/bin/drush site-install 'minimal' --config-dir=../config/sync --account-name='admin' --account-pass='admin' --yes
-        vendor/bin/drush deploy
-        vendor/bin/drush locale-check
-        vendor/bin/drush locale-update
-        vendor/bin/drush cr
+        ddev composer install --no-dev --no-progress --prefer-dist --optimize-autoloader
+      shell: bash
+
+    - name: Install site
+      run: |
+        sed -i '/if (file_exists(\$app_root/,/}/ s/^# *//' "web/sites/default/settings.php"
+        cp .ddev/files/settings.local.php web/sites/default/settings.local.php
+        ddev drush site:install 'minimal' --existing-config --account-name=admin --account-pass=admin -y
+        ddev update
       shell: bash
