--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -15,16 +15,21 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup project and test data fill
+      - name: Setup DDEV
         uses: ddev/github-action-setup-ddev@v1.10.1
+
+      - name: Setup project
         run: |
           ddev composer install --no-dev --no-progress --prefer-dist --optimize-autoloader
           sed -i '/if (file_exists(\$app_root/,/}/ s/^# *//' "web/sites/default/settings.php"
           cp .ddev/files/settings.local.php web/sites/default/settings.local.php
           ddev drush site:install 'minimal' --existing-config --account-name=admin --account-pass=admin -y
           ddev update
-          ddev drush fill-lotto-draws-data --all
-          ddev drush cr
+
+        - name: Test data fill
+          run: |
+            ddev drush fill-lotto-draws-data --all
+            ddev drush cr
 
       - name: Get ZIP file URL from PHP
         id: get_zip_url
