--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -17,9 +17,13 @@ jobs:
 
       - name: Setup DDEV
         uses: ddev/github-action-setup-ddev@v1.10.1
+        with:
+          autostart: false
 
       - name: Setup project
         run: |
+          ddev config --php-version 8.4
+          ddev start
           ddev composer install --no-dev --no-progress --prefer-dist --optimize-autoloader
           sed -i '/if (file_exists(\$app_root/,/}/ s/^# *//' "web/sites/default/settings.php"
           cp .ddev/files/settings.local.php web/sites/default/settings.local.php
