Using ddev for drush command

--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Get ZIP file URL from PHP
         id: get_zip_url
         run: |
-          URL=$(vendor/bin/drush php:eval "echo \Drupal\jpf_import\Api\Sto::buildDownloadUrl(\Drupal\jpf_store\Enum\Versions::currentVersion());")
+          URL=$(ddev drush php:eval "echo \Drupal\jpf_import\Api\Sto::buildDownloadUrl(\Drupal\jpf_store\Enum\Versions::currentVersion());")
           echo "ZIP_URL=$URL" >> $GITHUB_ENV
 
       - name: Download ZIP & extract CSV file
