--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,6 +4,7 @@ includes:
 parameters:
     level: 10
     reportUnmatchedIgnoredErrors: false
+    treatPhpDocTypesAsCertain: false
     inferPrivatePropertyTypeFromConstructor: true
     scanDirectories:
       - vendor/drush/drush
