--- a/grumphp.yml
+++ b/grumphp.yml
@@ -25,7 +25,42 @@ grumphp:
     files: [ ]
     variables: { }
     paths: [ ]
-  testsuites: []
+  testsuites:
+    quality:
+      tasks:
+        - composer
+        - composer_normalize
+        - jsonlint
+        - phpa
+        - phpcpd
+        - phpcs
+        - phplint
+        - phpmd
+        - phpmnd
+        - phpstan
+        - twigcsfixer
+        - xmllint
+        - yamllint
+    ci:
+      tasks:
+        - composer
+        - composer_normalize
+        - jsonlint
+        - phpa
+        - phpcpd
+        - phpcs
+        - phplint
+        - phpmd
+        - phpmnd
+        - phpstan
+        - twigcs
+        - xmllint
+        - yamllint
+    outdated:
+      tasks:
+        - phpversion
+        - securitychecker_composeraudit
+
   tasks:
     composer:
       file: ./composer.json
@@ -50,84 +85,6 @@ grumphp:
       metadata:
         blocking: true
         enabled: true
-        label: null
-        priority: 0
-        task: null
-    composer_require_checker:
-      composer_file: 'composer.json'
-      config_file: ~
-      ignore_parse_errors: false
-      triggered_by:
-        - 'composer.json'
-        - 'composer.lock'
-        - '*.php'
-      metadata:
-        blocking: true
-        enabled: false
-        label: null
-        priority: 0
-        task: null
-    git_blacklist:
-      keywords:
-        - "die\\("
-        - "var_dump\\("
-        - "exit;"
-      whitelist_patterns:
-        - web/modules/custom
-        - web/profiles/custom
-        - web/themes/custom
-      triggered_by:
-        - inc
-        - install
-        - module
-        - php
-        - profile
-        - theme
-      regexp_type: G
-      match_word: true
-      ignore_patterns: [ ]
-      metadata:
-        blocking: true
-        enabled: false
-        label: null
-        priority: 0
-        task: null
-    git_branch_name:
-      whitelist:
-        - "/JIRA-([0-9]*)/"
-      blacklist:
-        - "develop"
-        - "master"
-      additional_modifiers: ''
-      allow_detached_head: true
-      metadata:
-        blocking: true
-        enabled: false
-        label: null
-        priority: 0
-        task: null
-    git_commit_message:
-      allow_empty_message: false
-      enforce_capitalized_subject: true
-      enforce_no_subject_punctuations: false
-      enforce_no_subject_trailing_period: true
-      enforce_single_lined_subject: true
-      type_scope_conventions:
-        types: []
-        scopes: ~
-        subject_pattern: >-
-          ([a-zA-Zа-яА-Я0-9-_ #@'\/\"]+)
-      skip_on_merge_commit: true
-      max_body_width: 72
-      max_subject_width: 60
-      matchers:
-        Must contain JIRA issue number: /JIRA-\d+/
-      case_insensitive: true
-      multiline: true
-      additional_modifiers: ''
-      metadata:
-        blocking: true
-        enabled: false
         label: null
         priority: 0
         task: null
