--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "drupal/core-composer-scaffold": "11.2.2",
         "drupal/core-project-message": "11.2.2",
         "drupal/core-recommended": "11.2.2",
-        "drupal/drush_batch_bar": "dev-main",
+        "drupal/drush_batch_bar": "^1.0@beta",
         "drupal/gin": "^5.0",
         "drupal/gin_toolbar": "^3.0",
         "drupal/potx": "^1.1",
@@ -57,10 +57,6 @@
         {
             "type": "composer",
             "url": "https://asset-packagist.org"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/johnatas-x/drush_batch_bar"
         }
     ],
     "minimum-stability": "dev",
