--- a/web/modules/custom/jpf_home/jpf_home.info.yml
+++ b/web/modules/custom/jpf_home/jpf_home.info.yml
@@ -7,4 +7,4 @@ dependencies:
   - jpf_store:jpf_store
 
 'interface translation project': jpf_home
-'interface translation server pattern': modules/custom/%project/translations/%project.%language.po
+'interface translation server pattern': extension://translations/%project.%language.po
