--- a/web/modules/custom/jpf_import/jpf_import.info.yml
+++ b/web/modules/custom/jpf_import/jpf_import.info.yml
@@ -10,4 +10,4 @@ dependencies:
   - ultimate_cron:ultimate_cron
 
 'interface translation project': jpf_import
-'interface translation server pattern': modules/custom/%project/translations/%project.%language.po
+'interface translation server pattern': extension://translations/%project.%language.po
