--- a/web/modules/custom/jpf_stats/jpf_stats.info.yml
+++ b/web/modules/custom/jpf_stats/jpf_stats.info.yml
@@ -10,4 +10,4 @@ dependencies:
   - jpf_utils:jpf_utils
 
 'interface translation project': jpf_stats
-'interface translation server pattern': modules/custom/%project/translations/%project.%language.po
+'interface translation server pattern': extension://translations/%project.%language.po
