--- a/web/modules/custom/jpf_utils/jpf_utils.info.yml
+++ b/web/modules/custom/jpf_utils/jpf_utils.info.yml
@@ -6,4 +6,4 @@ package: Custom
 required: true
 
 'interface translation project': jpf_utils
-'interface translation server pattern': modules/custom/%project/translations/%project.%language.po
+'interface translation server pattern': extension://translations/%project.%language.po
