--- a/web/modules/custom/jpf_views/jpf_views.info.yml
+++ b/web/modules/custom/jpf_views/jpf_views.info.yml
@@ -9,4 +9,4 @@ dependencies:
   - jpf_stats:jpf_stats
 
 'interface translation project': jpf_views
-'interface translation server pattern': modules/custom/%project/translations/%project.%language.po
+'interface translation server pattern': extension://translations/%project.%language.po
