--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -3,6 +3,7 @@ _core:
 module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
+  big_pipe: 0
   block: 0
   breakpoint: 0
   charts: 0
@@ -27,6 +28,7 @@ module:
   language: 0
   link: 0
   locale: 0
+  memcache: 0
   menu_link_content: 0
   menu_ui: 0
   mysql: 0
@@ -34,6 +36,11 @@ module:
   page_cache: 0
   path_alias: 0
   potx: 0
+  purge: 0
+  purge_processor_cron: 0
+  purge_queuer_coretags: 0
+  purge_tokens: 0
+  purge_ui: 0
   system: 0
   text: 0
   token: 0
@@ -41,13 +48,15 @@ module:
   ultimate_cron: 0
   update: 0
   user: 0
+  varnish_image_purge: 0
+  varnish_purge_tags: 0
+  varnish_purger: 0
   view_custom_table: 0
   views_ui: 0
   content_translation: 10
   views: 10
   minimal: 1000
 theme:
-  stark: 0
   claro: 0
   gin: 0
 profile: minimal
