--- a/web/modules/custom/jpf_algo/jpf_algo.info.yml
+++ b/web/modules/custom/jpf_algo/jpf_algo.info.yml
@@ -7,4 +7,4 @@ dependencies:
   - jpf_stats:jpf_stats
 
 'interface translation project': jpf_algo
-'interface translation server pattern': modules/custom/%project/translations/%project.%language.po
+'interface translation server pattern': extension://translations/%project.%language.po
