--- a/web/modules/custom/jpf_store/jpf_store.info.yml
+++ b/web/modules/custom/jpf_store/jpf_store.info.yml
@@ -8,4 +8,4 @@ dependencies:
   - jpf_utils:jpf_utils
 
 'interface translation project': jpf_store
-'interface translation server pattern': modules/custom/%project/translations/%project.%language.po
+'interface translation server pattern': extension://translations/%project.%language.po
