--- a/.ddev/.env.web
+++ b/.ddev/.env.web
@@ -19,3 +19,6 @@ VARNISH_ADMIN_PORT="80"
 # Redefine these vars for cron context.
 IS_DDEV_PROJECT=true
 DDEV_PHP_VERSION=8.4
+
+# Xdebug
+DRUSH_ALLOW_XDEBUG=1
