--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -13,8 +13,7 @@ use_dns_when_possible: true
 timezone: Europe/Paris
 composer_version: 2.8.9
 disable_settings_management: true
-web_environment:
-    - DRUSH_ALLOW_XDEBUG=1
+web_environment: []
 corepack_enable: false
 ddev_version_constraint: '>= 1.24.7'
 
